# bf-interpreter

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: compile_arm.rs  compile_llvm.rs  compress.rs  interpreter.rs  io_utils.rs  main.rs  parser.rs
src/codegen/: arm.rs  llvm.rs  mod.rs
src/common/: mod.rs
src/ir/: mod.rs  optimizer.rs
src/minify/: mod.rs  optimizer.rs
src/runtime/: mod.rs
src/syntax/: mod.rs
tests/: cli.rs  compile.rs  interpret.rs  minify.rs
tests/programs/: compress.bf  print_no_loop.b  print_no_loop.bf
