[package]
name = "bf-tools"
description = "A collection of tools for working with Brainfuck code."
version = "0.1.0"
edition = "2021"
authors = ["Marcos Traverso"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"